force-app/main/default/objects/ProductQuestionnaire__c/ProductQuestionnaire__c.object-meta.xml
<CustomObject>
    <description>Informações complementares de produto para interfaces explicativas sobre suas características. Informações nesse objeto nao interfecem nas configurações de EPC e CPQ sendo apenas acessórias.</description>
    <label>Questionário de Produto</label>
    <nameField>
        <label>Nome do Questionário de Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionários de Produto</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>