force-app/main/default/objects/ProductQuestionnaire__c/fields/AreaCodeList__c.field-meta.xml
<CustomField>
    <fullName>AreaCodeList__c</fullName>
    <label>Lista de DDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>