force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsAnswer__c.field-meta.xml
<CustomField>
    <fullName>BenefitsAnswer__c</fullName>
    <label>Resposta de Benefícios</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>