force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsName01__c.field-meta.xml
<CustomField>
    <fullName>BenefitsName01__c</fullName>
    <label>Nome do Benefício 1</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>