force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsName02__c.field-meta.xml
<CustomField>
    <fullName>BenefitsName02__c</fullName>
    <label>Nome do Benefício 2</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>