force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsName03__c.field-meta.xml
<CustomField>
    <fullName>BenefitsName03__c</fullName>
    <label>Nome do Benefício 3</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>