force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsQuestion__c.field-meta.xml
<CustomField>
    <fullName>BenefitsQuestion__c</fullName>
    <label>Pergunta de Benefícios</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>