force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsValue01__c.field-meta.xml
<CustomField>
    <fullName>BenefitsValue01__c</fullName>
    <label>Valor do Benefício 1</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>