force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsValue02__c.field-meta.xml
<CustomField>
    <fullName>BenefitsValue02__c</fullName>
    <label>Valor do Benefício 2</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>