force-app/main/default/objects/ProductQuestionnaire__c/fields/BenefitsValue03__c.field-meta.xml
<CustomField>
    <fullName>BenefitsValue03__c</fullName>
    <label>Valor do Benefício 3</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>