force-app/main/default/objects/ProductQuestionnaire__c/fields/InternetAnswer01__c.field-meta.xml
<CustomField>
    <fullName>InternetAnswer01__c</fullName>
    <label>Resposta 1 sobre Internet</label>
    <type>TextArea</type>
</CustomField>