force-app/main/default/objects/ProductQuestionnaire__c/fields/InternetAnswer02__c.field-meta.xml
<CustomField>
    <fullName>InternetAnswer02__c</fullName>
    <label>Resposta 2 sobre Internet</label>
    <type>TextArea</type>
</CustomField>