force-app/main/default/objects/ProductQuestionnaire__c/fields/InternetAnswer03__c.field-meta.xml
<CustomField>
    <fullName>InternetAnswer03__c</fullName>
    <label>Resposta 3 sobre Internet</label>
    <type>TextArea</type>
</CustomField>