force-app/main/default/objects/ProductQuestionnaire__c/fields/InternetQuestion01__c.field-meta.xml
<CustomField>
    <fullName>InternetQuestion01__c</fullName>
    <label>Pergunta 1 sobre Internet</label>
    <type>TextArea</type>
</CustomField>