force-app/main/default/objects/ProductQuestionnaire__c/fields/InternetQuestion02__c.field-meta.xml
<CustomField>
    <fullName>InternetQuestion02__c</fullName>
    <label>Pergunta 2 sobre Internet</label>
    <type>TextArea</type>
</CustomField>