force-app/main/default/objects/ProductQuestionnaire__c/fields/InternetQuestion03__c.field-meta.xml
<CustomField>
    <fullName>InternetQuestion03__c</fullName>
    <label>Pergunta 3 sobre Internet</label>
    <type>TextArea</type>
</CustomField>