force-app/main/default/objects/ProductQuestionnaire__c/fields/LegacyProductCode__c.field-meta.xml
<CustomField>
    <fullName>LegacyProductCode__c</fullName>
    <inlineHelpText>Preencha com o valor equivalente de produto do sistema legado. Para produtos novos não será preciso. Apenas utilizado na dupla convivência.</inlineHelpText>
    <label>Código de Produto do Legado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>