force-app/main/default/objects/ProductQuestionnaire__c/fields/MinCallAnswer01__c.field-meta.xml
<CustomField>
    <fullName>MinCallAnswer01__c</fullName>
    <label>Resposta 1 sobre Ligações</label>
    <type>TextArea</type>
</CustomField>