force-app/main/default/objects/ProductQuestionnaire__c/fields/MinCallAnswer02__c.field-meta.xml
<CustomField>
    <fullName>MinCallAnswer02__c</fullName>
    <label>Resposta 2 sobre Ligações</label>
    <type>TextArea</type>
</CustomField>