force-app/main/default/objects/ProductQuestionnaire__c/fields/MinCallAnswer03__c.field-meta.xml
<CustomField>
    <fullName>MinCallAnswer03__c</fullName>
    <label>Resposta 3 sobre Ligações</label>
    <type>TextArea</type>
</CustomField>