force-app/main/default/objects/ProductQuestionnaire__c/fields/MinCallQuestion01__c.field-meta.xml
<CustomField>
    <fullName>MinCallQuestion01__c</fullName>
    <label>Pergunta 1 sobre Ligações</label>
    <type>TextArea</type>
</CustomField>