force-app/main/default/objects/ProductQuestionnaire__c/fields/MinCallQuestion02__c.field-meta.xml
<CustomField>
    <fullName>MinCallQuestion02__c</fullName>
    <label>Pergunta 2 sobre Ligações</label>
    <type>TextArea</type>
</CustomField>