force-app/main/default/objects/ProductQuestionnaire__c/fields/MinCallQuestion03__c.field-meta.xml
<CustomField>
    <fullName>MinCallQuestion03__c</fullName>
    <label>Pergunta 3 sobre Ligações</label>
    <type>TextArea</type>
</CustomField>