force-app/main/default/objects/ProductQuestionnaire__c/fields/PartialRenewalAnswer01__c.field-meta.xml
<CustomField>
    <fullName>PartialRenewalAnswer01__c</fullName>
    <label>Resposta 1 sobre Renovação Parcial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>