force-app/main/default/objects/ProductQuestionnaire__c/fields/PartialRenewalAnswer02__c.field-meta.xml
<CustomField>
    <fullName>PartialRenewalAnswer02__c</fullName>
    <label>Resposta 2 sobre Renovação Parcial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>