force-app/main/default/objects/ProductQuestionnaire__c/fields/PartialRenewalAnswer03__c.field-meta.xml
<CustomField>
    <fullName>PartialRenewalAnswer03__c</fullName>
    <label>Resposta 3 sobre Renovação Parcial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>