force-app/main/default/objects/ProductQuestionnaire__c/fields/PartialRenewalQuestion01__c.field-meta.xml
<CustomField>
    <fullName>PartialRenewalQuestion01__c</fullName>
    <label>Pergunta 1 sobre Renovação Parcial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>