force-app/main/default/objects/ProductQuestionnaire__c/fields/PartialRenewalQuestion02__c.field-meta.xml
<CustomField>
    <fullName>PartialRenewalQuestion02__c</fullName>
    <label>Pergunta 2 sobre Renovação Parcial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>