force-app/main/default/objects/ProductQuestionnaire__c/fields/PartialRenewalQuestion03__c.field-meta.xml
<CustomField>
    <fullName>PartialRenewalQuestion03__c</fullName>
    <label>Pergunta 3 sobre Renovação Parcial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>