force-app/main/default/objects/ProductQuestionnaire__c/fields/PhoneLineType__c.field-meta.xml
<CustomField>
    <fullName>PhoneLineType__c</fullName>
    <description>Tipo de Linha suportada pelo produto</description>
    <label>Tipo de Linha</label>
    <length>80</length>
    <type>Text</type>
</CustomField>