force-app/main/default/objects/ProductQuestionnaire__c/fields/Precedent__c.field-meta.xml
<CustomField>
    <fullName>Precedent__c</fullName>
    <label>Precedente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>