force-app/main/default/objects/ProductQuestionnaire__c/fields/ProductCodeRef__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeRef__c</fullName>
    <description>Código do Produto relacionado ao questionário.</description>
    <inlineHelpText>Preencha com o valor do campo ProductCode do objeto Product2</inlineHelpText>
    <label>Código de Produto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>