force-app/main/default/objects/ProductQuestionnaire__c/fields/ProductPriceAnswer__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceAnswer__c</fullName>
    <label>Resposta do Preço do Produto</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>