force-app/main/default/objects/ProductQuestionnaire__c/fields/ProductPriceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceQuestion__c</fullName>
    <label>Pergunta do Preço do Produto</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>