force-app/main/default/objects/ProductQuestionnaire__c/fields/QueryCode__c.field-meta.xml
<CustomField>
    <fullName>QueryCode__c</fullName>
    <label>Código de Busca</label>
    <length>80</length>
    <type>Text</type>
</CustomField>