force-app/main/default/objects/ProductQuestionnaire__c/fields/RatesAnswer01__c.field-meta.xml
<CustomField>
    <fullName>RatesAnswer01__c</fullName>
    <label>Resposta 1 sobre Taxas</label>
    <type>TextArea</type>
</CustomField>