force-app/main/default/objects/ProductQuestionnaire__c/fields/RatesAnswer02__c.field-meta.xml
<CustomField>
    <fullName>RatesAnswer02__c</fullName>
    <label>Resposta 2 sobre Taxas</label>
    <type>TextArea</type>
</CustomField>