force-app/main/default/objects/ProductQuestionnaire__c/fields/RatesAnswer03__c.field-meta.xml
<CustomField>
    <fullName>RatesAnswer03__c</fullName>
    <label>Resposta 3 sobre Taxas</label>
    <type>TextArea</type>
</CustomField>