force-app/main/default/objects/ProductQuestionnaire__c/fields/RatesQuestion01__c.field-meta.xml
<CustomField>
    <fullName>RatesQuestion01__c</fullName>
    <label>Pergunta 1 sobre Taxas</label>
    <type>TextArea</type>
</CustomField>