force-app/main/default/objects/ProductQuestionnaire__c/fields/RatesQuestion02__c.field-meta.xml
<CustomField>
    <fullName>RatesQuestion02__c</fullName>
    <label>Pergunta 2 sobre Taxas</label>
    <type>TextArea</type>
</CustomField>