force-app/main/default/objects/ProductQuestionnaire__c/fields/RatesQuestion03__c.field-meta.xml
<CustomField>
    <fullName>RatesQuestion03__c</fullName>
    <label>Pergunta 3 sobre Taxas</label>
    <type>TextArea</type>
</CustomField>