force-app/main/default/objects/ProductQuestionnaire__c/fields/Regulation__c.field-meta.xml
<CustomField>
    <fullName>Regulation__c</fullName>
    <label>Regulamento</label>
    <type>TextArea</type>
</CustomField>