force-app/main/default/objects/ProductQuestionnaire__c/fields/RegulationDescription__c.field-meta.xml
<CustomField>
    <fullName>RegulationDescription__c</fullName>
    <label>Descrição do Regulamento</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>