force-app/main/default/objects/ProductQuestionnaire__c/fields/RequiresAcceptance__c.field-meta.xml
<CustomField>
    <fullName>RequiresAcceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requer Aceite</label>
    <type>Checkbox</type>
</CustomField>