force-app/main/default/objects/ProductQuestionnaire__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segmento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>