force-app/main/default/objects/ProductQuestionnaire__c/fields/ShowConsAward__c.field-meta.xml
<CustomField>
    <fullName>ShowConsAward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostra Prêmio</label>
    <type>Checkbox</type>
</CustomField>