force-app/main/default/objects/ProductQuestionnaire__c/fields/ShowConsCoupons__c.field-meta.xml
<CustomField>
    <fullName>ShowConsCoupons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motrar Cupons</label>
    <type>Checkbox</type>
</CustomField>