force-app/main/default/objects/ProductQuestionnaire__c/fields/ShowQuest__c.field-meta.xml
<CustomField>
    <fullName>ShowQuest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar Questionário</label>
    <type>Checkbox</type>
</CustomField>