force-app/main/default/objects/ProductQuestionnaire__c/fields/SMSMMSAnswer01__c.field-meta.xml
<CustomField>
    <fullName>SMSMMSAnswer01__c</fullName>
    <label>Resposta 1 sobre SMS e MMS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>