force-app/main/default/objects/ProductQuestionnaire__c/fields/SMSMMSAnswer02__c.field-meta.xml
<CustomField>
    <fullName>SMSMMSAnswer02__c</fullName>
    <label>Resposta 2 sobre SMS e MMS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>