force-app/main/default/objects/ProductQuestionnaire__c/fields/SMSMMSAnswer03__c.field-meta.xml
<CustomField>
    <fullName>SMSMMSAnswer03__c</fullName>
    <label>Resposta 3 sobre SMS e MMS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>