force-app/main/default/objects/ProductQuestionnaire__c/fields/SMSMMSQuestion01__c.field-meta.xml
<CustomField>
    <fullName>SMSMMSQuestion01__c</fullName>
    <label>Pergunta 1 sobre SMS e MMS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>