force-app/main/default/objects/ProductQuestionnaire__c/fields/SMSMMSQuestion02__c.field-meta.xml
<CustomField>
    <fullName>SMSMMSQuestion02__c</fullName>
    <label>Pergunta 2 sobre SMS e MMS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>