force-app/main/default/objects/ProductQuestionnaire__c/fields/SMSMMSQuestion03__c.field-meta.xml
<CustomField>
    <fullName>SMSMMSQuestion03__c</fullName>
    <label>Pergunta 3 sobre SMS e MMS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>